# ros2_robot_arm_grasp

./: .gitignore  README.md
src/Gloria-M-SDK-1.0.0/motor/: DM_Motor_Test.py
src/eyeInHand/: README.md  eyeInHand.py  eye_in_hand.py  robotToolPose.csv  保存RGB图像.py
src/grasp_ws/: 1.py  README.md  start.sh
src/grasp_ws/config/: classes.yaml
src/grasp_ws/src/codroid_msgs/: CMakeLists.txt  package.xml
src/grasp_ws/src/codroid_msgs/msg/: RobotInfo.msg
src/grasp_ws/src/codroid_node/: package.xml  setup.cfg  setup.py
src/grasp_ws/src/codroid_node/codroid_node/: codroid_io copy.py  codroid_io.py  codroid_move_test.py
src/grasp_ws/src/grasp_interfaces/: CMakeLists.txt  package.xml
src/grasp_ws/src/grasp_publisher/: package.xml  setup.py
src/grasp_ws/src/llm_voice/: package.xml  setup .cfg  setup.py
src/grasp_ws/src/llm_voice/llm_voice/: llm_module.py  llm_node.py
src/grasp_ws/src/llm_voice/srv/: AskText.srv
src/graspnet-baseline-main/: demo.py  train.py  zyh_demo.py  zyh_train.py
src/graspnet-baseline-main/dataset/: graspnet_dataset.py
src/graspnet-baseline-main/graspnetAPI-master/: setup.py
src/graspnet-baseline-main/kw/: D435.py  RGB_and_Depth对齐.py  robot.py  robot2.py  zyh_cv_process.py  zyh_get_base_point.py  zyh_grasp_process.py  内参读取.py
src/graspnet-baseline-main/segment-anything-main/: .gitignore  zyh_yolo_sam.py
src/label_process/: capture_test.py  check.py  save_RGB.py
src/librealsense-master/: D435的相机内参以及深度因子.txt  RGB_and_Depth对齐.py  hand_eye_result.json  picture.py  realsenseD435.py
src/motor/: DrEmpower_can.py  test.py
(+6 files in other folders)
